# genshin-dual-sub

./: .gitignore  LICENSE  README.md  config.ini.example  main.py  pyproject.toml  req.conda.list.txt  req.pip.freeze.txt  requirements.txt
cpl/: README.md  configs.py  format.py  process.py
fmt/: format.py  handler.py  ja.py  ruby.py  session.py  tools.py
lev/: core.py  handler.py  session.py
ocr/: configs.py  debug.py  debugs.py  format.py  imgtools.py  main.py  manager.py  ocr.py  screenshot.py  session.py  wintools.py
ocr/gs/: dialog.py  info.py  screen.py  status.py
ovl/: configs.py  handler.py  init.py  manager.py  session.py  testing.py  tools.py
share/: assets.py  format.py  info.py  session.py
